--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,5 @@
-/* ----------- Responsive TABLETTE (<= 1024px) ----------- */
 @media (max-width: 1024px) {
-  *{
+  * {
     box-sizing: border-box;
   }
 
@@ -23,12 +22,12 @@
   }
 }
 
-/* ----------- Responsive MOBILE (<= 768px) ----------- */
+/* ================= Responsive MOBILE =============== */
 @media (max-width: 768px) {
   body {
     overflow-y: scroll;
   }
-  
+
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -41,6 +40,10 @@
     flex-wrap: wrap;
     gap: 10px;
     justify-content: space-between;
+  }
+
+  .fa-user i{
+    display: none;
   }
 
   .demo-btn,
@@ -75,5 +78,112 @@
 
   .title {
     font-size: 2rem;
+  }
+
+  .game-container {
+    width: 95vw;
+    height: auto;
+    min-height: 100vh;
+    margin: 0.5rem auto;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    font-family: var(--font-family);
+  }
+
+  .game-header {
+    flex-direction: row;
+    padding: 0.8rem;
+    gap: 0.5rem;
+    text-align: center;
+  }
+
+  .typing-area {
+    max-height: 270px;
+    height: 270px;
+    background: var(--color-black);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    overflow-y: hidden;
+    contain: layout;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .text-to-type {
+    margin: 0;
+    width: 100%;
+    line-height: 1.5;
+    hyphens: auto;
+    text-shadow: 0 0 5px rgba(185, 183, 183, 0.3);
+    animation: fadeIn 0.5s ease-out;
+  }
+
+  .stats {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .stat-card {
+    display: flex;
+    flex-direction: row;
+    padding: 0.8rem;
+  }
+
+  .action-buttons {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .word {
+    position: relative;
+    display: inline-block;
+    padding: 0 5px;
+    transition: 0.2s ease ease-in-out;
+  }
+
+  .word.active {
+    font-size: 1.5rem;
+    font-weight: 850;
+    animation: pulse 2s infinite;
+  }
+
+  .quit-btn,
+  .retry-btn {
+    padding: 0.8rem 1.8rem;
+    border: none;
+    border-radius: 50px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 1rem;
+  }
+
+  @keyframes pulse {
+    0% {
+      color: rgba(32, 7, 222, 0.96);
+    }
+    50% {
+      color: rgba(34, 9, 218, 0.946);
+    }
+    100% {
+      color: rgba(30, 106, 236, 0.882);
+    }
+  }
+
+  .letter.correct {
+    color: var(--success);
+    font-weight: bold;
+  }
+
+  .letter.wrong {
+    color: var(--error);
+    animation: shake 0.5s;
   }
 }
